--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -27,10 +27,12 @@
       }
       input{
          height: 30px;
+         outline: none;
 
       }
       textarea {
          height: 100px;
+         outline: none;
       }
 
       @media screen and (max-width: 750px) {
