--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -4,7 +4,7 @@
 .mainBlock {
   min-height: 100vh;
   background-color: $bgMainColor;
-  
+
   .particles {
     position: absolute;
     right: 0;
@@ -13,28 +13,39 @@
     left: 0;
     opacity: 0.3;
   }
-  .mainText {
-    margin-top: 300px;
-    width: 400px;
-    span{
-      @include text($textFontFamily,  22px,  normal, 400);
-      color: $textHeaderColor;
-    }
-    h1{
-      @include text($titleFontFamily,  40px,   normal, 600);
-      color: $textHeaderColor;
-    }
-    .spanJob{
-      @include text($textFontFamily,  26px,  normal, 600);
-      color: $textHeaderColor;
+
+  .mainContainer {
+    // margin-top: 300px;
+
+    .mainText {
+      margin-top: 300px;
+      width: 400px;
+
+      span {
+        @include text($textFontFamily, 22px, normal, 400);
+        color: $textHeaderColor;
+      }
+
+      h1 {
+        @include text($titleFontFamily, 40px, normal, 600);
+        color: $textHeaderColor;
+      }
+
+      .spanJob {
+        @include text($textFontFamily, 26px, normal, 600);
+        color: $textHeaderColor;
+      }
+
     }
 
+    .mainPhoto {
+      width: 400px;
+      height: 400px;
+      background-color: #fff;
+        @media screen and (max-width: 750px) {
+          width: 300px;
+       }
+    }
   }
 
-  .mainPhoto {
-    margin-top: 300px;
-    width: 200px;
-    height: 200px;
-    background-color: #fff;
-  }
 }
