--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -5,7 +5,7 @@
    margin: 0 auto;
    display: flex;
    align-content: space-around;
-   justify-content: space-around;
+   justify-content:  space-evenly;
    align-items: center;
    flex-wrap: wrap;
  }
