--- a/src/skills/skillItem/SkillItem.module.scss
+++ b/src/skills/skillItem/SkillItem.module.scss
@@ -8,7 +8,11 @@
    align-items: center;
    text-align: center;
    margin-bottom: 30px;
-   box-shadow: 0 0 8px rgba(0,0,0,0.3);;
+   box-shadow: 0 0 8px rgba(0,0,0,0.3);
+   &:hover{
+         transform: scale(1.1);
+   }
+
 
    .skillIcon {
       width: 100px;
