--- a/src/projects/projectItem/ProjectItem.module.scss
+++ b/src/projects/projectItem/ProjectItem.module.scss
@@ -10,9 +10,12 @@
 	flex-direction: column;
 	justify-content: center;
 	flex-wrap: wrap;
-	padding-bottom: 20px;
-	margin-bottom: 20px;
+	padding-bottom: 30px;
+	margin-bottom: 40px;
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+	&:hover{
+		transform: scale(1.1);
+}
 
 	.imgProject {
 		width: 100%;
@@ -26,6 +29,7 @@
 		background-repeat: no-repeat;
 		/* для .imgProject ::before */
 		position: relative;
+		
 
 		&::before {
 			content: "";
