--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -18,6 +18,9 @@
       a:hover{
          opacity: 0.6;
       }
+      @media screen and (max-width: 430px) {
+         width: 300px;
+      }
    }
   
    h4{
