--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -2,7 +2,8 @@
 @import "../styles/sass/mixins.scss";
 
 .footerBlock {
-   background-color: $bgColor;
+   background-color: $bgMainColor;
+   // background-color: $bgColor;
 
    .footerContainer {
       flex-direction: column;
@@ -16,7 +17,8 @@
       justify-content: space-between;
       margin-top: 30px;
       a:hover{
-         opacity: 0.6;
+         // opacity: 0.6;
+         transform: scale(1.3);
       }
       @media screen and (max-width: 430px) {
          width: 300px;
@@ -26,9 +28,11 @@
    h4{
       @include text($titleFontFamily,  24px,  1.2, 600);
       margin: 30px 0 20px;
+      color: #f3f3f3;
    }
    h5{
       @include text($titleFontFamily,  14px,  1.2, 600);
       margin: 0 0 20px;
+      color: #f3f3f3;
    }
 }
