--- a/src/header/Nav/Nav.module.scss
+++ b/src/header/Nav/Nav.module.scss
@@ -13,12 +13,11 @@
     cursor: pointer;
     &:hover{
       text-decoration: underline;
-      color:$titleColor;
       transition: 0.2s;
     }
   }
   .active{
-    color:$titleColor;
+    text-decoration: underline;
     transition: 0.2s;
   }
   @media screen and (max-width: 500px) {
